devconf2024/04_deploy_applications/devconf2024-application-01/base/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/component: devconf2024-application-01
    app.kubernetes.io/instance: devconf2024-application-01
  name: devconf2024-application-01
  namespace: devconf2024-application-01
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/component: devconf2024-application-01
    app.kubernetes.io/instance: devconf2024-application-01
status:
  loadBalancer: {}
