devconf2024/04_deploy_applications/devconf2024-application-01/base/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: devconf2024-application-01
  namespace: devconf2024-application-01
spec:
  port:
    targetPort: 8001-tcp
  to:
    kind: Service
    name: devconf2024-application-01
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
